# jacthepong

./: CMakeLists.txt  LICENSE
resources/sprites/: credit.txt
src/: Ball.cpp  Ball.h  Entity.cpp  Entity.h  Player.cpp  Player.h  Powerup.cpp  Powerup.h  RenderManager.cpp  RenderManager.h  ScoreManager.cpp  ScoreManager.h  Text.cpp  Text.h  main.cpp
